re-enviando arquivo index.html

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <body>
     <div class="container">
 		<h1>Site de P. Dayvson</h1>
-		<p>Seja-bem vindo, o conteúdo será postado em breve.</p>
+		<p>Seja bem-vindo, o conteúdo será postado em breve.</p>
 	</div>
 </body>
 </html>
